Fixed align filters for order view

--- a/component/admin/assets/css/redshop.css
+++ b/component/admin/assets/css/redshop.css
@@ -643,3 +643,15 @@ div.current select, div.current input, div.current textarea, div.current select 
 .attrSecondRow{
 	padding: 0 0 5px 0;
 }
+.input-append, .input-prepend {
+	display: inline-block;
+	vertical-align: middle;
+	white-space: nowrap;
+}
+.filterItem {
+	display: inline-block;
+	margin: 0 5px 5px 0;
+}
+.filterItem .input-append, .filterItem .input-prepend{
+	margin-bottom: 0;
+}
